agregamos un estilo y una imagen

--- a/endex.html
+++ b/endex.html
@@ -10,8 +10,8 @@
 <body>
     <div class="contenedor">
         <h1> bienvenido a tu mejor clase de Github </h1>
-        <p> Este es un ejemplo de pagina web simple para probar en git hub.</p>
-        <a href="#" class=" boton-redireccion" >HAZ CLICK AQUI</a>
+        <p> ACABAMOS DE HACER UN CAMBIO PARA NUEVA RAMA.</p>
+        <a href="#" class=" boton-redireccion" >NUEVA RAMA</a>
     </div>
 </body>
 </html>
