cambios de rama2 texto

--- a/endex.html
+++ b/endex.html
@@ -10,8 +10,8 @@
 <body>
     <div class="contenedor">
         <h1> bienvenido a tu mejor clase de Github </h1>
-        <p> ACABAMOS DE HACER UN CAMBIO PARA NUEVA RAMA.</p>
-        <a href="#" class=" boton-redireccion" >NUEVA RAMA</a>
+        <p> ACABAMOS DE HACER UN CAMBIO PARA LA NUEVA RAMA2 CREADA LAS 7.</p>
+        <a href="#" class=" boton-redireccion" >NUEVA RAMA CAMBIAR</a>
     </div>
 </body>
 </html>
